# Innovation_TensorBoard

./: readme.md
Innovative_Tensorboard/: CMakeLists.txt  ImageHandler.h  icons.qrc  main.cpp  operationHandler.h  predictedimages.cpp  predictedimages.h  predictedresults.cpp  predictedresults.h  registration.cpp  registration.h  registration.ui  signin.cpp  signin.h  signin.ui  widget.cpp  widget.h  widget.ui
Innovative_Tensorboard/build_wasm/: CMakeCache.txt  Innovative_Tensorboard.js  cmake_install.cmake
QT_Examples/HostAddress/: CMakeLists.txt  widget.h
QT_Examples/build-HostAddress-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT_Examples/build-HostAddress-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT_Examples/build-mapTest-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  mapTest
QT_Examples/build-network-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  network
QT_Examples/build-qmlMap-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appqmlMap  appqmlmap_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
QT_Examples/build-qmlMap-WebAssembly_Qt_6_2_4-Debug/: CMakeCache.txt  qtcsettings.cmake
QT_Examples/build-qmlMap-WebAssembly_Qt_6_2_4-MinSizeRel/: CMakeCache.txt  qtcsettings.cmake
QT_Examples/build-qmlMap-WebAssembly_Qt_6_2_4-Profile/: CMakeCache.txt  qtcsettings.cmake
QT_Examples/build-testNetwork-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  testNetwork
QT_Examples/build-testNetwork-Desktop_Qt_6_2_4_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT_Examples/build-webPageAI-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appwebPageAI  build.ninja  cmake_install.cmake
QT_Examples/build-webPageAI-Desktop_Qt_6_2_4_GCC_64bit-Release/: .ninja_deps  .ninja_log  AppRun  CMakeCache.txt  appwebPageAI  appwebPageAI.desktop  appwebpageai_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT_Examples/mapTest/: CMakeLists.txt  leaflet.html  map.qrc  widget.cpp  widget.h  widget.ui
QT_Examples/network/: CMakeLists.txt  test.cpp  test.ui  widget.cpp  widget.h  widget.ui
QT_Examples/qmlMap/: CMakeLists.txt  Main.qml  main.cpp
QT_Examples/testNetwork/: CMakeLists.txt  widget.cpp  widget.h
QT_Examples/webPageAI/: CMakeLists.txt  DialogPage.qml  IImageManager.h  IMageManag.h  Images.qrc  imagehandle.cpp  imagehandle.h  imagehandler.cpp  imagehandler.h  main.cpp  main.qml  restapihandler.cpp  restapihandler.h
build-Innovative_Tensorboard-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Innovative_Tensorboard  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Innovative_Tensorboard-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Innovative_Tensorboard-Desktop_Qt_5_15_2_GCC_64bit-Debug/Innovative_Tensorboard_autogen/: deps
build-Innovative_Tensorboard-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Innovative_Tensorboard  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Innovative_Tensorboard-Qt_5_15_2_WebAssembly-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
build-Innovative_Tensorboard-WebAssembly-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Innovative_Tensorboard  build.ninja  cmake_install.cmake
build-Innovative_Tensorboard-WebAssembly_Qt_6_2_4-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Innovative_Tensorboard.html  Innovative_Tensorboard.js  build.ninja  cmake_install.cmake  qtcsettings.cmake
(+1438 files in other folders)
